Add own tpm2 tools package To be in full control of the version, since we need at least 5.6-rc0, which contains an important fixes we need These: https://github.com/tpm2-software/tpm2-tools/commit/4894e1c413821013ca35837c920fb85bbe822f30 https://github.com/tpm2-software/tpm2-tools/commit/8afa2e81449a6ea0b11b09ab40b193d4d618acff

--- a/br-ext/Config.in
+++ b/br-ext/Config.in
@@ -7,3 +7,4 @@ source "$BR2_EXTERNAL_OPTEE_PATH/package/optee_benchmark_ext/Config.in"
 source "$BR2_EXTERNAL_OPTEE_PATH/package/ftpm_optee_ext/Config.in"
 source "$BR2_EXTERNAL_OPTEE_PATH/package/linux_ftpm_mod_ext/Config.in"
 source "$BR2_EXTERNAL_OPTEE_PATH/package/ra_verifier_ext/Config.in"
+source "$BR2_EXTERNAL_OPTEE_PATH/package/tpm2-tools_ext/Config.in"
